<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orangeDark"
    tools:context=".ui.categories.CategoriesActivity">

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivChuckJokes"
        android:layout_width="@dimen/margin_64"
        android:layout_height="@dimen/margin_64"
        android:layout_marginTop="@dimen/margin_8"
        android:src="@drawable/chuck_jokes"
        app:layout_constraintEnd_toEndOf="@+id/lblTitle"
        app:layout_constraintStart_toStartOf="@+id/lblTitle"
        app:layout_constraintTop_toBottomOf="@+id/lblTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_default"
        android:layout_marginTop="@dimen/margin_150"
        android:background="@drawable/body_border_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_marginLeft="@dimen/margin_4"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/categories"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_16"
            app:layout_constraintBottom_toBottomOf="@+id/ivDecorator"
            app:layout_constraintStart_toEndOf="@+id/ivDecorator"
            app:layout_constraintTop_toTopOf="@+id/ivDecorator" />

        <ImageView
            android:id="@+id/ivDecorator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_round_arrow_right" />

        <Button
            android:id="@+id/btnFavorites"
            android:layout_width="@dimen/button_width"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginRight="@dimen/margin_32"
            android:background="@drawable/background_button"
            android:drawableEnd="@drawable/ic_star_base"
            android:drawableRight="@drawable/ic_star_base"
            android:fontFamily="@font/fredoka_one"
            android:padding="@dimen/margin_4"
            android:text="@string/favorites"
            android:textColor="@color/baseColor"
            android:textSize="@dimen/font_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_default"
            android:layout_marginTop="@dimen/margin_64"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/category_item"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/pbCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/errorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivTryAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_round_refresh_24" />

            <TextView
                android:id="@+id/tvErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginBottom="@dimen/margin_4"
                android:fontFamily="@font/fredoka_one"
                android:gravity="center"
                android:text="@string/error_message"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>